Changes to get spark job to successfully output rego files that pass rego unit tests
Signed-off-by: Dom Del Nano <ddelnano@gmail.com>

--- a/automatic-authz-envoy-opa/envoy-opa/patches/envoy-backend.yaml
+++ b/automatic-authz-envoy-opa/envoy-opa/patches/envoy-backend.yaml
@@ -10,6 +10,8 @@ spec:
     spec:
       containers:
         - name: opa
+          # The existing OPA image is too old for rego.v1 imports
+          image: openpolicyagent/opa:0.59.0-envoy
           args:
           - run
           - --server
