--- a/automatic-authz-envoy-opa/requirements.txt
+++ b/automatic-authz-envoy-opa/requirements.txt
@@ -1,8 +1,15 @@
+black==24.10.0
+click==8.1.7
 iniconfig==2.0.0
+Jinja2==3.1.4
+MarkupSafe==3.0.1
 mock==5.1.0
+mypy-extensions==1.0.0
 numpy==1.26.4
 packaging==24.1
 pandas==2.2.3
+pathspec==0.12.1
+platformdirs==4.3.6
 pluggy==1.5.0
 py4j==0.10.9.7
 pyarrow==17.0.0
