--- a/automatic-authz-envoy-opa/envoy-opa/otel-collector/kustomization.yaml
+++ b/automatic-authz-envoy-opa/envoy-opa/otel-collector/kustomization.yaml
@@ -1,7 +1,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: default
-
+secretGenerator:
+  - name: otel-exporter-aws-credentials
+    files:
+      - AWS_ACCESS_KEY_ID
+      - AWS_SECRET_ACCESS_KEY
 resources:
   - collector.yaml
